--- a/client/components/checkbox/style.scss
+++ b/client/components/checkbox/style.scss
@@ -4,6 +4,7 @@
 	display: inline-flex;
 	align-items: center;
 	position: relative;
+	vertical-align: text-bottom;
 
 	input {
 		margin: 0;
